@@ -77,6 +77,12 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
         TolX         |     1e-6       |     1e-7
         TolFun       |     1e-6       |     1e-7
 
+ ** Using "clear" with no arguments now removes only local variables
+    from the current workspace.  Global variables will no longer be
+    visible, but they continue to exist in the global workspace and
+    possibly other workspaces such as the base workspace.
+    This change was made for Matlab compatibility.
+
  ** Figure graphic objects have a new property "Number" which is
     read-only and will return the handle (number) of the figure.
     However, if the property "IntegerHandle" has been set to "off" then
